--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,33 @@ button {
 button:first-child {
     margin-left: 0;
 }
+
+section {
+    margin-top: 1em;
+}
+
+article {
+    margin: 0.5em 0.5em 0.5em 0;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    padding: 1em;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.4;
+    font-size: 1.2rem;
+    margin: 0.5em 0;
+}
+
+html {
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    background: #333;
+    color: whitesmoke;
+}
+
+body {
+    min-height: 100vh;
+    font-size: 1.5rem;
+    padding: 0 10% 10%;
+}
