--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@ button {
     padding: 0.5rem;
 }
 
-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
+/*section {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
 
 input {
     text-align: center;
