[redux][post] AddPostForm/useDispatch/slice.actions

--- a/src/index.css
+++ b/src/index.css
@@ -29,16 +29,16 @@ button {
 /*    align-items: center;*/
 /*}*/
 
-input {
-    text-align: center;
-    max-width: 2.5em;
-}
+/*input {*/
+/*    text-align: center;*/
+/*    max-width: 2.5em;*/
+/*}*/
 
-button {
-    font-size: 2rem;
-    margin: 0.5em 0 0.5em 0.5em;
-    min-width: 2em;
-}
+/*button {*/
+/*    font-size: 2rem;*/
+/*    margin: 0.5em 0 0.5em 0.5em;*/
+/*    min-width: 2em;*/
+/*}*/
 
 button:first-child {
     margin-left: 0;
