--- a/src/pages/Post/index.css
+++ b/src/pages/Post/index.css
@@ -15,3 +15,15 @@ select {
     font: inherit;
     margin-bottom: 1em;
 }
+
+.postCredit {
+    font-size: 1rem;
+}
+
+.reactionButton {
+    margin: 0 0.25em 0 0;
+    background: transparent;
+    border: none;
+    color: whitesmoke;
+    font-size: 1rem;
+}
